--- a/conf/nxt.properties
+++ b/conf/nxt.properties
@@ -2,3 +2,9 @@ nxt.allowedUserHosts=*
 nxt.allowedBotHosts=*
 nxt.myAddress=
 nxt.apiServerHost=0.0.0.0
+nxt.disabledAPITags=Shuffling; Aliases
+nxt.shareMyAddress=true
+nxt.getMorePeers=false
+nxt.usePeersDb=false
+nxt.wellKnownPeers=178.128.90.101; 178.128.86.30; 178.128.149.241; 188.166.113.140; 192.169.6.179; pool.mineyerownbusiness.com
+
