--- a/conf/nxt.properties
+++ b/conf/nxt.properties
@@ -2,7 +2,7 @@ nxt.allowedUserHosts=*
 nxt.allowedBotHosts=*
 nxt.myAddress=
 nxt.apiServerHost=0.0.0.0
-nxt.disabledAPITags=Shuffling; Aliases
+nxt.disabledAPITags=Shuffling; Aliases; Plugins
 nxt.shareMyAddress=true
 nxt.getMorePeers=false
 nxt.usePeersDb=false
