--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -67,11 +67,12 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=178.128.90.101; 178.128.86.30; 71.235.154.76; 178.128.149.241; 188.166.113.140; 192.169.6.179
+nxt.defaultPeers=178.128.149.241; 192.169.6.179; 108.53.198.223; 197.89.108.228; 80.98.42.201; 88.99.225.142; \
+  87.138.221.20;  
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
-nxt.wellKnownPeers=178.128.90.101; 178.128.86.30; 71.235.154.76; 178.128.149.241; 188.166.113.140; 192.169.6.179
+nxt.wellKnownPeers=178.128.149.241; 192.169.6.179;
 
 # Known bad peers to be blacklisted.
 nxt.knownBlacklistedPeers=
