--- a/conf/nxt.properties
+++ b/conf/nxt.properties
@@ -2,9 +2,9 @@ nxt.myAddress=
 nxt.allowedUserHosts=*
 nxt.allowedBotHosts=*
 nxt.apiServerHost=0.0.0.0
-ntx.disabledAPIs=getPlugins
+nxt.disabledAPIs=getPlugins
 nxt.disabledAPITags=Shuffling; Aliases; 
 nxt.shareMyAddress=true
 nxt.getMorePeers=false
 nxt.usePeersDb=false
-nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 
+nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154;
