--- a/conf/nxt.properties
+++ b/conf/nxt.properties
@@ -7,4 +7,4 @@ nxt.disabledAPITags=Shuffling; Aliases;
 nxt.shareMyAddress=true
 nxt.getMorePeers=false
 nxt.usePeersDb=false
-nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154;
+nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154; pool.mineyerownbusiness.com;
