--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -67,11 +67,11 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154; 108.53.198.223; 197.89.108.228; 80.98.42.201; 88.99.225.142; 87.138.221.20;  
+nxt.defaultPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154; pool.mineyerownbusiness.com; 108.53.198.223; 197.89.108.228; 80.98.42.201; 88.99.225.142; 87.138.221.20;  
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
-nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154; 
+nxt.wellKnownPeers=178.128.149.241; 192.169.6.179; 174.81.214.240; 77.97.215.154; pool.mineyerownbusiness.com; 
 
 # Known bad peers to be blacklisted.
 nxt.knownBlacklistedPeers=
